--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     <script defer src="app.js"></script>
 </head>
 <body>
-    asc
+    <header>
+        <div class="title"> The Coca Cola Gambling Site</div>
+        <nav>
+            <button class="">ax zzx</button>
+            <button class="">dfbcx</button>
+            <button class="">dfbdvb</button>
+            <button class="">tyjfgddb</button>
+        </nav>
+    </header>
 </body>
 </html>
