--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script defer src="app.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="title"> The Coca Cola Gambling Site</div>
-        <nav>
-            <button class="">ax zzx</button>
-            <button class="">dfbcx</button>
-            <button class="">dfbdvb</button>
-            <button class="">tyjfgddb</button>
-        </nav>
+      <div class="title">The Coca Cola Gambling Site</div>
+      <nav>
+        <button onclick="document.location='test.html'" class="navButton">Game 1</button>
+        <button class="navButton">Profile</button>
+      </nav>
     </header>
-</body>
+    <div class="main">
+      <h3>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni modi
+        officia perspiciatis itaque animi facere ex veritatis odio blanditiis
+        porro veniam, debitis perferendis nemo corrupti temporibus laudantium
+        cum ducimus sunt!
+      </h3>
+    </div>
+  </body>
 </html>
