--- a/dice.html
+++ b/dice.html
@@ -7,12 +7,17 @@
     <title>Document</title>
     <script defer src="dice.js"></script>
     <link rel="stylesheet" href="dice.css">
+    
 </head>
 <body>
+    <div class="dice">
+        <img class="dice1" src="diceSides\perspective-dice-six-faces-random.png" alt="Dice with question marks on the sides">
+        <img class="dice2" src="diceSides\perspective-dice-six-faces-random.png" alt="Dice with question marks on the sides">
+    </div>
     <button class="diceRoll">
         Roll
     </button>
-    <div class="dice">
+    <div >
 ouhsdv
     </div>
 </body>
