--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div class="title">The Coca Cola Gambling Site</div>
+      <div class="title">The Coca-Cola Gambling Site</div>
       <nav>
         <button onclick="document.location='test.html'" class="navButton">Game 1</button>
         <button class="navButton">Profile</button>
