--- a/dice.html
+++ b/dice.html
@@ -14,11 +14,14 @@
         <img class="dice1" src="diceSides\perspective-dice-six-faces-random.png" alt="Dice with question marks on the sides">
         <img class="dice2" src="diceSides\perspective-dice-six-faces-random.png" alt="Dice with question marks on the sides">
     </div>
-    <button class="diceRoll">
-        Roll
-    </button>
-    <div >
-ouhsdv
+    <div class="textBelow" >
+
     </div>
+    <div class="buttonGrid">
+        <button class="diceRoll">
+            Roll
+        </button>
+    </div>
+
 </body>
 </html>
