--- a/dice.html
+++ b/dice.html
@@ -10,6 +10,9 @@
     
 </head>
 <body>
+    <div class="moneyText">
+        
+    </div>
     <div class="dice">
         <img class="dice1" src="diceSides\perspective-dice-six-faces-random.png" alt="Dice with question marks on the sides">
         <img class="dice2" src="diceSides\perspective-dice-six-faces-random.png" alt="Dice with question marks on the sides">
@@ -18,8 +21,11 @@
 
     </div>
     <div class="buttonGrid">
-        <button class="diceRoll">
-            Roll
+        <button class="diceRollH diceRoll">
+            Roll High
+        </button>
+        <button class="diceRollL diceRoll">
+            Roll Low
         </button>
     </div>
 
