--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
       <div class="title">The Coca-Cola Gambling Site</div>
       <nav>
-        <button onclick="document.location='test.html'" class="navButton">Game 1</button>
+        <button onclick="document.location='dice.html'" class="navButton">Dice</button>
         <button class="navButton">Profile</button>
       </nav>
     </header>
