--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Coca-cola gambling</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="app.js"></script>
   </head>
@@ -12,8 +12,12 @@
     <header>
       <div class="title">The Coca-Cola Gambling Site</div>
       <nav>
-        <button onclick="document.location='dice.html'" class="navButton">Dice</button>
-        <button class="navButton">Profile</button>
+        <button onclick="document.location='dice.html'" class="navButton">
+          Dice
+        </button>
+        <button onclick="document.location='about.html'" class="navButton">
+          about
+        </button>
       </nav>
     </header>
     <div class="main">
